feat: complete GloboClima implementation for AUVO technical test
- Implemented serverless architecture with AWS Lambda and API Gateway
- Added JWT authentication with secure password hashing
- Integrated WeatherAPI and REST Countries APIs
- Created DynamoDB repositories for user data and favorites
- Built responsive Blazor Server frontend
- Configured Infrastructure as Code with Terraform
- Added comprehensive test coverage
- Cleaned up unnecessary files and scripts

--- a/.gitignore
+++ b/.gitignore
@@ -345,15 +345,52 @@ coverage/
 .terraform.lock.hcl
 terraform.tfvars
 
+# Lambda deployment packages
+infrastructure/lambda-deployment.zip
+*.zip
+lambda-*.zip
+
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
+.vs/
+.vshistory/
 
 # OS
 .DS_Store
 Thumbs.db
+desktop.ini
+
+# Shell scripts (development only)
+*.sh
+deploy-*.sh
+run-*.sh
+build-*.sh
+setup-*.sh
+check-*.sh
+stop-*.sh
+
+# HTTP test files
+*.http
+*.rest
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+*.orig
+*~
+placeholder.txt
+
+# Claude/AI assistant files
+CLAUDE.md
+claude.md
+*-claude.*
+
+# Assembly info (auto-generated)
+AssemblyInfo.cs
 
 # Logs
 *.log
