--- a/src/GloboClima.Web/appsettings.json
+++ b/src/GloboClima.Web/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ApiUrl": "https://localhost:7219/"
+  "ApiUrl": "https://3ei1klgibg.execute-api.us-east-1.amazonaws.com/prod/"
 }
