--- a/src/GloboClima.Domain/GloboClima.Domain.csproj
+++ b/src/GloboClima.Domain/GloboClima.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.305.9" />
+  </ItemGroup>
+
 </Project>
