--- a/src/GloboClima.Api/appsettings.Development.json
+++ b/src/GloboClima.Api/appsettings.Development.json
@@ -6,14 +6,18 @@
     }
   },
   "AllowedHosts": "*",
-  "JwtSettings": {
-    "Secret": "your-super-secret-key-for-development-only-change-in-production",
+  "Jwt": {
+    "Secret": "your-super-secret-key-for-development-only-change-in-production-minimum-32-characters",
     "Issuer": "GloboClima",
     "Audience": "GloboClima",
     "ExpirationHours": 24
   },
-  "OpenWeatherMapApiKey": "YOUR_API_KEY_HERE",
-  "WeatherApiKey": "50ad4ee7dfb040bba30170921251006",
+  "OpenWeatherMap": {
+    "ApiKey": "YOUR_OPENWEATHERMAP_API_KEY_HERE"
+  },
+  "WeatherAPI": {
+    "ApiKey": "YOUR_WEATHERAPI_KEY_HERE"
+  },
   "AWS": {
     "Profile": "default",
     "Region": "us-east-1"
