--- a/src/GloboClima.Api/appsettings.json
+++ b/src/GloboClima.Api/appsettings.json
@@ -7,13 +7,12 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Secret": "THIS_IS_A_SECRET_KEY_FOR_DEVELOPMENT_ONLY_CHANGE_IN_PRODUCTION",
     "Issuer": "GloboClima",
     "Audience": "GloboClima",
     "ExpirationMinutes": "60"
   },
-  "OpenWeatherMap": {
-    "ApiKey": "YOUR_OPENWEATHERMAP_API_KEY"
+  "WeatherService": {
+    "UseOpenWeatherMap": "false"
   },
   "AWS": {
     "Region": "us-east-1"
